--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC:400italic,700,900|Raleway:500|Martel+Sans:400,700);
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+  font-family: 'codropsicons';
+  src: url("../fonts/codropsicons/codropsicons.eot");
+  src: url("../fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"), url("../fonts/codropsicons/codropsicons.woff") format("woff"), url("../fonts/codropsicons/codropsicons.ttf") format("truetype"), url("../fonts/codropsicons/codropsicons.svg#codropsicons") format("svg");
+}
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -13,10 +21,11 @@
 }
 
 body {
+  background: #fff;
   color: #7b7b7b;
   font-weight: 400;
   font-size: 16px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Martel Sans", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -31,7 +40,7 @@ body {
 
 a {
   outline: none;
-  color: #36a8a8;
+  color: #81c483;
   text-decoration: none;
 }
 
@@ -45,94 +54,128 @@ button:focus {
   outline: none;
 }
 
-/* Filter menu */
-.filter{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  background-color: #9ADCDF;
-  -webkit-transform: translate3d(0, 0, 0);    
-  transform: translate3d(0, 0, 0);    
-  -webkit-transition: -webkit-transform 0.3s;   
-  transition: -webkit-transform 0.3s; 
-}
-
-.filter.hidden {
-  -webkit-transform: translate3d(0, -200%, 0);    
-  transform: translate3d(0, -200%, 0);    
-  -webkit-transition: -webkit-transform 0.3s;   
-  transition: -webkit-transform 0.3s; 
-}
-
-.filter > button {
-  border: none;
-  background: none;
-  font-weight: bold;
-  margin: 5px;
-  color: white;
-  border-bottom: 2px solid transparent;
-}
-
-.filter > .is-checked {
-  color: #0A52A3;
-  border-color: #0A52A3;
-}
-
 /* Sidebar */
 .sidebar {
+  text-align: center;
+  background: #f5f5f5;
+  z-index: 1000;
   position: fixed;
   width: 300px;
   max-width: 100%;
   height: 100%;
   height: 100vh;
-  background-color: #EFA5CD;
-  text-align: center;
-  z-index: 1000;
   top: 0;
   left: 0;
   padding: 2em 1em;
-  -webkit-transform: translate3d(0, 0, 0);    
-  transform: translate3d(0, 0, 0);    
-  -webkit-transition: -webkit-transform 0.3s;   
-  transition: -webkit-transform 0.3s; 
 }
 
 .sidebar h1 {
   margin: 0.75em 0 0;
-  font-size: 3em;
+  font-size: 2em;
   line-height: 1;
-  color: #FFF8FC;
-  font-family: 'Sacramento', cursive;
-}
-
-.sidebar h5 {
-  color: #FAD5E9;
-  font-size: 1.2em;
+  font-family: "Playfair Display", serif;
 }
 
 .sidebar h1 span {
   display: block;
 }
 
+/* Codrops links */
+.codrops-links {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  min-height: 45px;
+}
+
+.codrops-links::after {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 1px;
+  height: 100%;
+  background: #ddd;
+  content: '';
+  -webkit-transform: rotate3d(0, 0, 1, 22.5deg);
+  transform: rotate3d(0, 0, 1, 22.5deg);
+}
+
+.codrops-icon {
+  display: inline-block;
+  margin: 0.5em;
+  padding: 0em 0;
+  width: 1.5em;
+  text-decoration: none;
+}
+
+.codrops-icon span {
+  display: none;
+}
+
+.codrops-icon:before {
+  margin: 0 5px;
+  text-transform: none;
+  font-weight: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-family: 'codropsicons';
+  line-height: 1;
+  speak: none;
+}
+
+.codrops-icon--drop:before {
+  content: "\e001";
+}
+
+.codrops-icon--prev:before {
+  content: "\e004";
+}
+
+/* Demo links */
+.codrops-demos {
+  margin: 2em 0 0;
+  font-size: 0.75em;
+}
+
+.codrops-demos a {
+  display: inline-block;
+  margin: 0 0.5em;
+}
+
+.codrops-demos a.current-demo {
+  color: #333;
+  font-weight: bold;
+}
+
+.codrops-demos a.current-demo:focus {
+  color: #aaa;
+}
+
+.related {
+  font-size: 0.85em;
+  padding-bottom: 1em;
+}
+
+.related h3 {
+  margin: 3em 0 0.5em 0;
+  font-size: 0.95em;
+}
+
+.related a {
+  display: block;
+  color: inherit;
+}
+
+.related a:hover,
+.related a:focus {
+  color: #414741;
+}
+
 /* Main content */
 .main {
   position: relative;
   z-index: 50;
-}
-
-#titleDiv-Mobile {
-  background-color: #EFA5CD;
-  height: 50px;
-  text-align: center;
-}
-
-.mobile-title-text {
-  color: #FFF8FC;
-  font-family: 'Sacramento', cursive;
-  font-size: 2em;
-  margin: 0;
-  padding-top: 5px;
 }
 
 /* Grid container */
@@ -159,6 +202,25 @@ button:focus {
   opacity: 1;
 }
 
+/* Top bar above the grid */
+.top-bar {
+  background: #fff;
+  width: 100%;
+  line-height: 1;
+  padding: 15px 15px 10px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.top-bar__headline {
+  margin: 0;
+  font-size: 0.75em;
+}
+
 /* Menu button for toggling the sidebar (appears on small screen) */
 .menu-toggle {
   position: fixed;
@@ -166,6 +228,7 @@ button:focus {
   display: block;
   width: 25px;
   height: 25px;
+  top: 14px;
   left: 14px;
   cursor: pointer;
   background: none;
@@ -181,7 +244,7 @@ button:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background-color: #EFA5CD;
+  background-color: #81c483;
   font-size: 0px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -197,7 +260,7 @@ button:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #EFA5CD;
+  background: #81c483;
   content: '';
 }
 
@@ -209,6 +272,26 @@ button:focus {
 .menu-toggle span:after {
   -webkit-transform: translateY(7px);
   transform: translateY(7px);
+}
+
+/* Filter/dropdown dummy on the right */
+.filter {
+  text-align: right;
+  font-size: 0.75em;
+  margin-left: auto;
+}
+
+.dropdown {
+  font-weight: bold;
+  margin-left: 5px;
+  cursor: pointer;
+  color: #81c483;
+}
+
+.dropdown::after {
+  content: '\25BC';
+  margin-left: 2px;
+  font-size: 80%;
 }
 
 /* Grid item */
@@ -233,10 +316,6 @@ button:focus {
   justify-content: center;
 }
 
-.grid__item.hidden {
-  display: none;
-}
-
 /* Grid item "border" */
 .grid__item::before {
   position: absolute;
@@ -245,7 +324,7 @@ button:focus {
   right: 55px;
   bottom: 0px;
   left: 55px;
-  border-bottom: 1px solid #bcf2f2;
+  border-bottom: 1px solid rgba(74, 74, 74, 0.075);
 }
 
 .grid__item * {
@@ -256,8 +335,7 @@ button:focus {
 .title {
   margin: 0;
   font-size: 1.875em;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
+  font-family: "Playfair Display", serif;
   text-align: center;
 }
 
@@ -286,7 +364,7 @@ button:focus {
   position: absolute;
   width: 100%;
   height: 3px;
-  background: #bcf2f2;
+  background: #a4e7ad;
   left: 0;
   top: -1px;
   -webkit-transform: scale3d(0, 1, 1);
@@ -316,8 +394,7 @@ button:focus {
 
 .title--preview,
 .loader,
-.category,
-.image--preview {
+.category {
   -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
   transition: transform 0.2s, opacity 0.2s;
   -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
@@ -325,11 +402,6 @@ button:focus {
 }
 
 /* closing (delays) */
-.image--preview{
-  -webkit-transition-delay: 0.15s;
-  transition-delay: 0.15s;
-}
-
 .title--preview {
   -webkit-transition-delay: 0.15s;
   transition-delay: 0.15s;
@@ -346,33 +418,25 @@ button:focus {
 }
 
 /* opening */
-.grid__item--animate .image--preview{
-  -webkit-transition-delay: 0.1s;
-  transition-delay: 0.1s;
-  opacity: 0;
-  -webkit-transform: translate3d(0, -20px, 0);
-  transform: translate3d(0, -20px, 0);
-}
-
 .grid__item--animate .title--preview {
-  -webkit-transition-delay: 0.1s;
-  transition-delay: 0.1s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
   opacity: 0;
   -webkit-transform: translate3d(0, -20px, 0);
   transform: translate3d(0, -20px, 0);
 }
 
 .grid__item--animate .loader {
-  -webkit-transition-delay: 0.15s;
-  transition-delay: 0.15s;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
   opacity: 0;
   -webkit-transform: translate3d(0, -30px, 0);
   transform: translate3d(0, -30px, 0);
 }
 
 .grid__item--animate .category {
-  -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
   opacity: 0;
   -webkit-transform: translate3d(0, -40px, 0);
   transform: translate3d(0, -40px, 0);
@@ -487,6 +551,18 @@ button:focus {
   opacity: 0;
 }
 
+/* Grid footer */
+.page-meta {
+  width: 100%;
+  background: #fff;
+  width: 100%;
+  padding: 15px 15px 10px;
+  text-align: center;
+  font-size: 0.75em;
+  font-weight: bold;
+  cursor: default;
+}
+
 /* Placeholder element (dummy that gets animated when we click on an item) */
 .placeholder {
   pointer-events: none;
@@ -553,7 +629,7 @@ button:focus {
   overflow: hidden;
   height: 0;
   opacity: 0;
-  padding: 20px 60px 80px 60px;
+  padding: 60px 60px 80px 60px;
   pointer-events: none;
   font-size: 0.85em;
 }
@@ -579,7 +655,7 @@ button:focus {
 .category--full {
   font-size: 1.25em;
   margin-bottom: 20px;
-  color: #9ADCDF;
+  color: #81c483;
 }
 
 .title--full {
@@ -747,10 +823,6 @@ button:focus {
     margin-left: 300px;
   }
 
-  .filter {
-    margin-left: 300px;
-  }
-
   .content__item {
     font-size: 1em;
   }
@@ -759,7 +831,31 @@ button:focus {
     padding: 45px 45px 30px;
   }
 
-  #titleDiv-Mobile {
+  /* Demo ad */
+  body #cdawrap {
+    right: auto;
+    left: 30px;
+    top: auto;
+    bottom: 0;
+    background: none;
+    border: none;
+    width: 240px;
+    background: #f5f5f5;
+  }
+
+  body #cdawrap .carbon-text {
+    color: #7b7b7b;
+  }
+
+  body #cdawrap a.carbon-poweredby {
+    color: #7883C4;
+  }
+
+  body #cdawrap a:hover.carbon-poweredby {
+    color: #333;
+  }
+
+  body #cdawrap #cda-remove {
     display: none;
   }
 }
@@ -785,14 +881,14 @@ button:focus {
     right: 5px;
     bottom: 5px;
     left: 5px;
-    border: 1px solid #bcf2f2;
+    border: 1px solid rgba(74, 74, 74, 0.075);
     -webkit-transition: opacity 0.3s;
     transition: opacity 0.3s;
   }
 
   .grid__item:hover::before,
   .grid__item:focus::before {
-    border: 3px solid #bcf2f2;
+    border: 3px solid rgba(129, 196, 131, 0.5);
   }
 
   .grid__item--loading.grid__item::before {
@@ -823,46 +919,43 @@ button:focus {
     width: 16.66%;
   }
 }
-
+/* small screen changes for sidebar (it becomes an off-canvas menu) */
 @media screen and (max-width: 599px) {
   .sidebar {
-    -webkit-transform: translate3d(-100%, 0, 0);    
-    transform: translate3d(-100%, 0, 0);    
-    -webkit-transition: -webkit-transform 0.3s;   
-    transition: -webkit-transform 0.3s; 
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
   }
 
-  #titleDiv-Mobile {
-    -webkit-transform: translate3d(0, 0, 0);    
-    transform: translate3d(0, 0, 0);    
-    -webkit-transition: -webkit-transform 0.3s;   
-    transition: -webkit-transform 0.3s; 
+  .sidebar.sidebar--open {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 
-  /*.sidebar.sidebar--open {
-    -webkit-transform: translate3d(0, 0, 0);    
-    transform: translate3d(0, 0, 0);    
-  }   
-  
-  .sidebar.sidebar--open ~ .main {    
-    pointer-events: none;   
-  }  */   
-  
-  /*.menu-toggle {    
-    display: inline-block;    
-  }  */ 
-  
-  /*.sidebar .close-button {    
-    opacity: 1;   
-    pointer-events: auto;   
-  }*/
+  .sidebar.sidebar--open ~ .main {
+    pointer-events: none;
+  }
+
+  .top-bar {
+    padding: 22px 15px 10px 60px;
+  }
+
+  .menu-toggle {
+    display: inline-block;
+  }
+
+  .sidebar .close-button {
+    opacity: 1;
+    pointer-events: auto;
+  }
 
   .title--full {
     font-size: 2em;
   }
 
   .content__item {
-    padding: 10px 20px 40px;
+    padding: 80px 20px 40px;
   }
 
   .content .close-button {
@@ -875,6 +968,9 @@ button:focus {
     top: 0;
     right: 0;
     background: #fff;
+    border-bottom: 1px solid #f5f5f5;
+    width: 100vw;
+    height: 50px;
     pointer-events: none;
     z-index: -1;
   }
@@ -884,3 +980,5 @@ button:focus {
     display: none;
   }
 }
+
+/*# sourceMappingURL=style1.css.map */
