--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC:400italic,700,900|Raleway:500|Martel+Sans:400,700);
-@font-face {
-  font-weight: normal;
-  font-style: normal;
-  font-family: 'codropsicons';
-  src: url("../fonts/codropsicons/codropsicons.eot");
-  src: url("../fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"), url("../fonts/codropsicons/codropsicons.woff") format("woff"), url("../fonts/codropsicons/codropsicons.ttf") format("truetype"), url("../fonts/codropsicons/codropsicons.svg#codropsicons") format("svg");
-}
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -22,10 +14,10 @@
 
 body {
   background: #fff;
-  color: #7b7b7b;
+  color: #black;
   font-weight: 400;
   font-size: 16px;
-  font-family: "Martel Sans", Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -40,14 +32,7 @@ body {
 
 a {
   outline: none;
-  color: #81c483;
   text-decoration: none;
-}
-
-a:hover,
-a:focus {
-  color: #333;
-  outline: none;
 }
 
 button:focus {
@@ -57,7 +42,8 @@ button:focus {
 /* Sidebar */
 .sidebar {
   text-align: center;
-  background: #f5f5f5;
+  color: #FFF8FC;
+  background: #EFA5CD;
   z-index: 1000;
   position: fixed;
   width: 300px;
@@ -71,89 +57,22 @@ button:focus {
 
 .sidebar h1 {
   margin: 0.75em 0 0;
-  font-size: 2em;
+  font-size: 3em;
   line-height: 1;
-  font-family: "Playfair Display", serif;
+  font-family: 'Sacramento', cursive;
 }
 
 .sidebar h1 span {
   display: block;
 }
 
-/* Codrops links */
-.codrops-links {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
-  min-height: 45px;
+.description {
+  font-size: 1.3em;
 }
 
-.codrops-links::after {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 1px;
-  height: 100%;
-  background: #ddd;
-  content: '';
-  -webkit-transform: rotate3d(0, 0, 1, 22.5deg);
-  transform: rotate3d(0, 0, 1, 22.5deg);
-}
-
-.codrops-icon {
-  display: inline-block;
-  margin: 0.5em;
-  padding: 0em 0;
-  width: 1.5em;
-  text-decoration: none;
-}
-
-.codrops-icon span {
-  display: none;
-}
-
-.codrops-icon:before {
-  margin: 0 5px;
-  text-transform: none;
-  font-weight: normal;
-  font-style: normal;
-  font-variant: normal;
-  font-family: 'codropsicons';
-  line-height: 1;
-  speak: none;
-}
-
-.codrops-icon--drop:before {
-  content: "\e001";
-}
-
-.codrops-icon--prev:before {
-  content: "\e004";
-}
-
-/* Demo links */
-.codrops-demos {
-  margin: 2em 0 0;
-  font-size: 0.75em;
-}
-
-.codrops-demos a {
-  display: inline-block;
-  margin: 0 0.5em;
-}
-
-.codrops-demos a.current-demo {
-  color: #333;
-  font-weight: bold;
-}
-
-.codrops-demos a.current-demo:focus {
-  color: #aaa;
-}
-
+/* Links */
 .related {
-  font-size: 0.85em;
+  font-size: 1em;
   padding-bottom: 1em;
 }
 
@@ -204,7 +123,7 @@ button:focus {
 
 /* Top bar above the grid */
 .top-bar {
-  background: #fff;
+  background: #9ADCDF;
   width: 100%;
   line-height: 1;
   padding: 15px 15px 10px;
@@ -216,9 +135,18 @@ button:focus {
   align-items: center;
 }
 
-.top-bar__headline {
+.top-bar__language {
   margin: 0;
   font-size: 0.75em;
+  padding-right: 8px;
+}
+
+.top-bar__language > a {
+  color: black;
+}
+
+.top-bar__language   > a.active {
+  color: white;
 }
 
 /* Menu button for toggling the sidebar (appears on small screen) */
@@ -285,7 +213,7 @@ button:focus {
   font-weight: bold;
   margin-left: 5px;
   cursor: pointer;
-  color: #81c483;
+  color: white;
 }
 
 .dropdown::after {
@@ -298,7 +226,7 @@ button:focus {
 .grid__item {
   padding: 45px 55px 30px;
   position: relative;
-  color: inherit;
+  color: black;
   background: #fff;
   min-height: 300px;
   cursor: pointer;
@@ -364,7 +292,7 @@ button:focus {
   position: absolute;
   width: 100%;
   height: 3px;
-  background: #a4e7ad;
+  background: #9ADCDF;
   left: 0;
   top: -1px;
   -webkit-transform: scale3d(0, 1, 1);
@@ -477,16 +405,10 @@ button:focus {
   filter: none;
 }
 
-.meta__date,
-.meta__reading-time {
+.meta__date {
   display: block;
-  float: left;
+  text-align: center;
   color: #aaa;
-}
-
-.meta__reading-time {
-  text-align: right;
-  float: right;
 }
 
 .meta__misc {
@@ -520,8 +442,7 @@ button:focus {
 }
 
 .meta--preview .meta__avatar,
-.meta--preview .meta__date,
-.meta--preview .meta__reading-time {
+.meta--preview .meta__date {
   -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
   transition: transform 0.3s, opacity 0.3s;
   -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
@@ -538,14 +459,8 @@ button:focus {
   transition-delay: 0.17s;
 }
 
-.grid__item--loading .meta__reading-time {
-  -webkit-transition-delay: 0.24s;
-  transition-delay: 0.24s;
-}
-
 .grid__item--loading .meta__avatar,
-.grid__item--loading .meta__date,
-.grid__item--loading .meta__reading-time {
+.grid__item--loading .meta__date {
   -webkit-transform: scale3d(0.5, 0.5, 1);
   transform: scale3d(0.5, 0.5, 1);
   opacity: 0;
@@ -655,7 +570,7 @@ button:focus {
 .category--full {
   font-size: 1.25em;
   margin-bottom: 20px;
-  color: #81c483;
+  color: #9ADCDF;
 }
 
 .title--full {
@@ -694,8 +609,7 @@ button:focus {
 .title--full,
 .meta--full .meta__avatar,
 .meta--full .meta__author,
-.meta--full .meta__date,
-.meta--full .meta__reading-time {
+.meta--full .meta__date {
   opacity: 0;
 }
 
@@ -711,8 +625,7 @@ button:focus {
 
 .meta--full .meta__avatar,
 .meta--full .meta__author,
-.meta--full .meta__date,
-.meta--full .meta__reading-time {
+.meta--full .meta__date{
   -webkit-transform: scale3d(0.5, 0.5, 1);
   transform: scale3d(0.5, 0.5, 1);
 }
@@ -721,8 +634,7 @@ button:focus {
 .content__item--show .title--full,
 .content__item--show .meta--full .meta__avatar,
 .content__item--show .meta--full .meta__author,
-.content__item--show .meta--full .meta__date,
-.content__item--show .meta--full .meta__reading-time {
+.content__item--show .meta--full .meta__date {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
@@ -751,11 +663,6 @@ button:focus {
 .content__item--show .meta--full .meta__date {
   -webkit-transition-delay: 0.27s;
   transition-delay: 0.27s;
-}
-
-.content__item--show .meta--full .meta__reading-time {
-  -webkit-transition-delay: 0.34s;
-  transition-delay: 0.34s;
 }
 
 .content__item--show.content__item p {
@@ -888,7 +795,7 @@ button:focus {
 
   .grid__item:hover::before,
   .grid__item:focus::before {
-    border: 3px solid rgba(129, 196, 131, 0.5);
+    border: 3px solid #9ADCDF;
   }
 
   .grid__item--loading.grid__item::before {
