Added link to title, comments not working properly The comments do not display for the correct blog post.

--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ button:focus {
   font-family: 'Sacramento', cursive;
 }
 
+.sidebar h1 > a {
+  color: white;
+}
+
 .sidebar h1 span {
   display: block;
 }
