--- a/style.css
+++ b/style.css
@@ -606,7 +606,7 @@ button:focus {
 /* content elements */
 #disqus_thread{
   max-width: 75%;
-  margin: 0 auto;
+  margin: 12px auto;
 }
 
 .comment-show{
